test_regress/t/t_param_type_id_bad.out
%Error: t/t_param_type_id_bad.v:10:26: Expecting a data type, not VARREF: 'i'
   10 |     parameter type P_T = i
      |                          ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
